fix navbar overlap in fixed mode

--- a/app/assets/stylesheets/mtl/layouts/_default.scss
+++ b/app/assets/stylesheets/mtl/layouts/_default.scss
@@ -101,6 +101,17 @@
     }
   }
   //&-back {}
+
+  // prevent overlap on the right in fixed navbar mode
+  @media #{$large-and-up} {
+    &.navbar-fixed {
+      > nav {
+        width: auto;
+        left: $mtl-layout-default-sidenav-width;
+        right: 0;
+      }
+    }
+  }
 }
 
 // content area
